# osai

./: .gitignore  CLAUDE.md
docs/: p1-overview.md
p1/: CLAUDE.md  README.md  pyproject.toml
p1/colab/: COLAB.md  colab_mn3.ipynb  colab_v1.ipynb  colab_v2_final.ipynb
p1/docs/: report.md
p1/src/: build_coco_masks.py  check_flops.py  eval.py  eval_tta.py  export_onnx.py  infer.py  measure_flops.py  package_submission.py  train.py
p1/src/config/: colab.yaml  colab_mn3_s1.yaml  colab_mn3_s2.yaml  colab_v2_final.yaml  colab_v2_final_s1.yaml  colab_v2_final_s2.yaml  default.yaml  light.yaml  quick.yaml  smoke.yaml  v2_0_stage1_160k.yaml  v2_1_stage1_160k.yaml  v2_A2_copy_paste_weighted.yaml  v2_A_copy_paste.yaml  v2_B_class_balanced.yaml  v2_C_lovasz.yaml  v2_D_boundary.yaml  v2_final.yaml  v2_final_test.yaml
p1/src/data/: builder.py  coco.py  copy_paste.py  download.py  sampler.py  transforms.py  voc.py
p1/src/losses/: boundary.py  lovasz.py  seg_loss.py
p1/src/models/: builder.py  seg_model.py
p1/src/models/aux/: fcn_head.py
p1/src/models/backbones/: mobilenet.py  resnet.py
p1/src/models/heads/: deeplabv3plus.py
p1/src/models/necks/: aspp.py  lr_aspp.py
p1/src/utils/: checkpoint.py  flops.py  metrics.py  seed.py
p1/tests/: test_boundary.py  test_checkpoint.py  test_coco.py  test_copy_paste.py  test_data_builder.py  test_flops_onnx.py  test_flops_pytorch.py  test_loss.py  test_lovasz.py  test_metrics.py  test_models.py  test_package_submission.py  test_sampler.py  test_seed.py  test_transforms.py  test_voc.py
w2/: main.py  pyproject.toml
(+51 files in other folders)
