[project]
name = "osai-p1"
version = "0.1.0"
description = "OSAI Project 1 — Pascal-VOC semantic segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "numpy>=2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.10",
    "wandb>=0.18",
    "pyyaml>=6.0",
    "pycocotools>=2.0",
    "onnx>=1.17",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["pytest>=8.0", "onnxscript>=0.1"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
